Fixed spacing of buttons in card headers

--- a/projects/ngclient/src/app/core/components/toggle-card/toggle-card.component.scss
+++ b/projects/ngclient/src/app/core/components/toggle-card/toggle-card.component.scss
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: p2r(4);
     font: var(--paragraph-10);
     cursor: pointer;
     user-select: none;
